syntax = "proto3";

package rgs.v1;

option go_package = "github.com/wizardbeardstudio/open-rgs-go/gen/rgs/v1;rgsv1";

import "google/api/annotations.proto";
import "rgs/v1/common.proto";

message PlayerCredentials {
  string player_id = 1;
  string pin = 2;
}

message OperatorCredentials {
  string operator_id = 1;
  string password = 2;
}

message SessionToken {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  string expires_at = 4;
  Actor actor = 5;
}

service IdentityService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/identity/login"
      body: "*"
    };
  }

  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/v1/identity/logout"
      body: "*"
    };
  }

  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/identity/refresh"
      body: "*"
    };
  }

  rpc SetCredential(SetCredentialRequest) returns (SetCredentialResponse) {
    option (google.api.http) = {
      post: "/v1/identity/credentials:set"
      body: "*"
    };
  }

  rpc DisableCredential(DisableCredentialRequest) returns (DisableCredentialResponse) {
    option (google.api.http) = {
      post: "/v1/identity/credentials:disable"
      body: "*"
    };
  }

  rpc EnableCredential(EnableCredentialRequest) returns (EnableCredentialResponse) {
    option (google.api.http) = {
      post: "/v1/identity/credentials:enable"
      body: "*"
    };
  }

  rpc GetLockout(GetLockoutRequest) returns (GetLockoutResponse) {
    option (google.api.http) = {
      get: "/v1/identity/lockouts"
    };
  }

  rpc ResetLockout(ResetLockoutRequest) returns (ResetLockoutResponse) {
    option (google.api.http) = {
      post: "/v1/identity/lockouts:reset"
      body: "*"
    };
  }
}

message LoginRequest {
  RequestMeta meta = 1;
  oneof credentials {
    PlayerCredentials player = 2;
    OperatorCredentials operator = 3;
  }
}

message LoginResponse {
  ResponseMeta meta = 1;
  SessionToken token = 2;
}

message LogoutRequest {
  RequestMeta meta = 1;
  string refresh_token = 2;
}

message LogoutResponse {
  ResponseMeta meta = 1;
}

message RefreshTokenRequest {
  RequestMeta meta = 1;
  string refresh_token = 2;
}

message RefreshTokenResponse {
  ResponseMeta meta = 1;
  SessionToken token = 2;
}

message SetCredentialRequest {
  RequestMeta meta = 1;
  Actor actor = 2;
  string credential_hash = 3;
  string reason = 4;
}

message SetCredentialResponse {
  ResponseMeta meta = 1;
}

message DisableCredentialRequest {
  RequestMeta meta = 1;
  Actor actor = 2;
  string reason = 3;
}

message DisableCredentialResponse {
  ResponseMeta meta = 1;
}

message EnableCredentialRequest {
  RequestMeta meta = 1;
  Actor actor = 2;
  string reason = 3;
}

message EnableCredentialResponse {
  ResponseMeta meta = 1;
}

message LockoutStatus {
  Actor actor = 1;
  int32 failed_attempts = 2;
  bool locked = 3;
  string locked_until = 4;
}

message GetLockoutRequest {
  RequestMeta meta = 1;
  Actor actor = 2;
}

message GetLockoutResponse {
  ResponseMeta meta = 1;
  LockoutStatus status = 2;
}

message ResetLockoutRequest {
  RequestMeta meta = 1;
  Actor actor = 2;
  string reason = 3;
}

message ResetLockoutResponse {
  ResponseMeta meta = 1;
  LockoutStatus status = 2;
}
